fix: add max-width property to avoid stretching the content

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     margin: 0 auto;
     color: #fff;
     background-color: #000;
+    max-width: 1440px;
   }
   
   h1 {
